<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">

        <!-- Question 1 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/question_1"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/question_text_1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/miami_heat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/miami_heat"
                android:onClick="onRadioButtonClickedQuestion1"/>

            <RadioButton
                android:id="@+id/new_york_knicks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_york_knicks"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion1"/>

            <RadioButton
                android:id="@+id/chicago_bulls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chicago_bulls"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion1"/>

        </RadioGroup>

        <!-- Question 2 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/question_2"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/question_text_2"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/lebron_james"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/lebron_james"
                android:onClick="onRadioButtonClickedQuestion2"/>

            <RadioButton
                android:id="@+id/kevin_durant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kevin_durant"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion2"/>

            <RadioButton
                android:id="@+id/stephen_curry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stephen_curry"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion2"/>

        </RadioGroup>

        <!-- Question 3 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/question_3"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/question_text_3"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/zach_randolph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/zach_randolph"
                android:onClick="onRadioButtonClickedQuestion3"/>

            <RadioButton
                android:id="@+id/kobe_bryant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kobe_bryant"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion3"/>

            <RadioButton
                android:id="@+id/dikembe_mutombo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dikembe_mutombo"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion3"/>

        </RadioGroup>

        <!-- Question 4 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/question_4"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/question_text_4"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/gortat_and_bargnani"
            android:paddingBottom="8dp"/>

        <CheckBox
            android:id="@+id/marcin_gortat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marcin_gortat"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/marco_belinelli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marco_belinelli"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/andrea_bargnani"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andrea_bargnani"
            android:layout_marginBottom="8dp"/>

        <CheckBox
            android:id="@+id/zaza_pachulia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zaza_pachulia"
            android:layout_marginBottom="8dp"/>

        <!-- Question 5 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/question_5"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/question_text_5"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/ray_walter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ray_walter"
                android:onClick="onRadioButtonClickedQuestion4"/>

            <RadioButton
                android:id="@+id/ray_dejean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ray_dejean"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion4"/>

            <RadioButton
                android:id="@+id/ray_joey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ray_joey"
                android:layout_marginBottom="8dp"
                android:onClick="onRadioButtonClickedQuestion4"/>

        </RadioGroup>

        <!-- Question 6 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/question_6"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/question_text_6"/>

        <EditText
            android:id="@+id/edit_text_answer_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_question_6"
            android:inputType="textCapWords"
            android:layout_marginBottom="8dp"/>

        <!-- Question 7 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/question_7"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/question_text_7"/>

        <EditText
            android:id="@+id/edit_text_answer_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_question_7"
            android:inputType="textCapWords"
            android:layout_marginBottom="8dp"/>

        <!-- Button which is checking correct answers -->

        <Button
            android:id="@+id/show_quiz_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_answers_button"
            android:layout_marginBottom="16dp"
            android:onClick="showQuizScore" />

    </LinearLayout>

</ScrollView>
